[tool.poetry]
name = "nyt"
version = "0.1.0"
description = "Stop wasting time on YouTube"
authors = ["ramsy0dev"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    {include = "nyt"}
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
rich = "^13.7.1"
sqlalchemy = "^2.0.30"
pytube = { path = "nyt/lib/pytube", develop = true}
notify-py = "^0.3.42"

[tool.poetry.plugins."console_scripts"]
nyt = "nyt:cli.run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

include = ["*.png", "*.png"]
