[tool.poetry]
name = "nyt"
version = "0.1.2"
description = "Stop wasting time on YouTube"
authors = ["ramsy0dev"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    {include = "nyt"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = "^0.12.3"
rich = "^13.7.1"
sqlalchemy = "^2.0.30"
notify-py = "^0.3.42"
yt-dlp = "^2024.5.27"
ytagegatebypass = {git = "https://github.com/pukkandan/yt-dlp-YTAgeGateBypass"}
pytube = {git = "https://github.com/ramsy0dev/pytube"}
fastapi = "^0.111.0"
uvicorn = ">=0.24.0,<0.25.0"
django = "^5.0.6"

[tool.poetry.plugins."console_scripts"]
nyt = "nyt:cli.run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
